--- a/css/style.css
+++ b/css/style.css
@@ -301,16 +301,15 @@
   100% {color: rgb(255, 0, 0);}
 }
 
-
-.tuneout-button {
-  max-width: 140px;
-  margin: auto;
+.tuneout-cont{
+  margin-top: 25px;
+  position: relative;
   display: flex;
 }
 
-
-.tuneout-cont{
-  margin-top: 25px;
+.tuneout-button {
+  margin: auto;
+  display: flex;
 }
 
 .tuneout-button:hover .tuneout-text{
@@ -319,16 +318,20 @@
   cursor: pointer;
 }
 
+.tuneout-button:hover ~ .tuneout-tooltip{
+  visibility: visible;
+}
+
 .tuneout-icon {
   display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: red;
-    border: 4px solid #DBDBDB;
-    border-radius: 50%;
-    width: 40px;
-    height: 40px;
-    z-index: 10;
+  justify-content: center;
+  align-items: center;
+  background-color: red;
+  border: 4px solid #DBDBDB;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  z-index: 10;
 }
 .tuneout-text {
   border-radius: 25px;
@@ -336,14 +339,29 @@
   background-color: #fff;
   font-size: 16px;
   font-weight: 500;
-  margin-left: -23px;
+  margin-left: -20px;
   margin-top: 5px;
-  width: 120px;
+  padding-left: 25px;
   text-align: right;
   height: 30px;
   padding-right: 15px;
   line-height: 27px;
   transition: all 0.3s ease;
+}
+
+.tuneout-tooltip{
+  position: absolute;
+  visibility: hidden;
+  min-width: 120px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 10px;
+  z-index: 1;
+  top: 45px;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .review-cont{
